// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioButton > Styles > should render with checked styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-strong-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled+label::after,
.circuit-1[disabled]+label::after {
  background-color: var(--cui-fg-on-strong-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
}

.circuit-1:disabled:checked+label::after,
.circuit-1[disabled]:checked+label::after {
  background-color: var(--cui-fg-accent-disabled);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-2::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-2::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

<div>
  <div
    class=" circuit-0"
  >
    <input
      checked=""
      class="circuit-1"
      id=":r1:"
      type="radio"
      value=""
    />
    <label
      class="circuit-2"
      for=":r1:"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`RadioButton > Styles > should render with default styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-strong-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled+label::after,
.circuit-1[disabled]+label::after {
  background-color: var(--cui-fg-on-strong-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
}

.circuit-1:disabled:checked+label::after,
.circuit-1[disabled]:checked+label::after {
  background-color: var(--cui-fg-accent-disabled);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-2::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-2::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

<div>
  <div
    class=" circuit-0"
  >
    <input
      class="circuit-1"
      id=":r0:"
      type="radio"
      value=""
    />
    <label
      class="circuit-2"
      for=":r0:"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`RadioButton > Styles > should render with disabled styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-strong-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled+label::after,
.circuit-1[disabled]+label::after {
  background-color: var(--cui-fg-on-strong-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
}

.circuit-1:disabled:checked+label::after,
.circuit-1[disabled]:checked+label::after {
  background-color: var(--cui-fg-accent-disabled);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-2::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-2::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

<div>
  <div
    class=" cui-field-disabled circuit-0"
  >
    <input
      class="circuit-1"
      disabled=""
      id=":r2:"
      type="radio"
      value=""
    />
    <label
      class="circuit-2"
      for=":r2:"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`RadioButton > Styles > should render with invalid styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1:hover+label::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-1:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
  border-color: var(--cui-border-accent);
}

.circuit-1:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible)+label::before {
  box-shadow: none;
  border-color: var(--cui-border-normal);
}

.circuit-1:checked:focus:not(:focus-visible)+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-accent);
}

.circuit-1:checked+label::after {
  -webkit-transform: translateY(-50%) scale(1, 1);
  -moz-transform: translateY(-50%) scale(1, 1);
  -ms-transform: translateY(-50%) scale(1, 1);
  transform: translateY(-50%) scale(1, 1);
  opacity: 1;
}

.circuit-1:disabled+label,
.circuit-1[disabled]+label {
  pointer-events: none;
  color: var(--cui-fg-normal-disabled);
}

.circuit-1:disabled+label::before,
.circuit-1[disabled]+label::before {
  border-color: var(--cui-border-strong-disabled);
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:disabled+label::after,
.circuit-1[disabled]+label::after {
  background-color: var(--cui-fg-on-strong-disabled);
}

.circuit-1:disabled:checked+label::before,
.circuit-1[disabled]:checked+label::before {
  border-color: var(--cui-border-accent-disabled);
}

.circuit-1:disabled:checked+label::after,
.circuit-1[disabled]:checked+label::after {
  background-color: var(--cui-fg-accent-disabled);
}

.circuit-1:hover+label::before,
.circuit-1:focus+label::before {
  border-color: var(--cui-border-danger-hovered);
}

.circuit-1:checked+label::before {
  border-color: var(--cui-border-danger);
}

.circuit-2 {
  color: var(--cui-fg-normal);
  display: inline-block;
  padding-left: 26px;
  position: relative;
  cursor: pointer;
}

.circuit-2::before {
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-2::after {
  box-sizing: border-box;
  height: 10px;
  width: 10px;
  background-color: var(--cui-fg-accent);
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0, 0);
  -moz-transform: translateY(-50%) scale(0, 0);
  -ms-transform: translateY(-50%) scale(0, 0);
  transform: translateY(-50%) scale(0, 0);
  opacity: 0;
  -webkit-transition: -webkit-transform 120ms ease-in-out,opacity 120ms ease-in-out;
  transition: transform 120ms ease-in-out,opacity 120ms ease-in-out;
}

.circuit-2:not(:focus)::before {
  border-color: var(--cui-border-danger);
  background-color: var(--cui-bg-danger);
}

.circuit-2:not(:focus)::after {
  background-color: var(--cui-fg-danger);
}

<div>
  <div
    class=" circuit-0"
  >
    <input
      aria-invalid="true"
      class="circuit-1"
      id=":r3:"
      type="radio"
      value=""
    />
    <label
      class="circuit-2"
      for=":r3:"
    >
      Label
    </label>
  </div>
</div>
`;
